--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>What To Watch</title>
   </head>
